Fix overflow by breaking words

--- a/plain/styles.css
+++ b/plain/styles.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    overflow-wrap: break-word;
 }
 
 html, body {
@@ -115,6 +116,8 @@ div {
 .center .i3 {
     height: 15%;
     width: 100%;
+    overflow: hidden;
+    overflow-y: auto;
     background-color: lightgreen;
 }
 
